# ros2learn

./: README.md
candpy_ws/install/: local_setup.sh  setup.sh
candpy_ws/install/cpp_pkg/lib/cpp_pkg/: node_template_node  qq_node  tx_qq_node
candpy_ws/install/cpp_pkg/share/cpp_pkg/: package.sh  package.xml
candpy_ws/install/py_pkg/share/py_pkg/: package.sh  package.xml
candpy_ws/log/: latest_build
candpy_ws/src/cpp_pkg/: CMakeLists.txt
candpy_ws/src/cpp_pkg/src/: node_template_node.cpp  qq_node.cpp  tx_qq_node.cpp
candpy_ws/src/py_pkg/: setup.py
fishbot_ws/: frames_2024-10-03_20.20.48.gv
fishbot_ws/install/: local_setup.sh  setup.sh
fishbot_ws/install/cartographer/share/cartographer/: package.dsv  package.ps1  package.sh  package.zsh
fishbot_ws/install/cartographer_ros/lib/cartographer_ros/: cartographer_assets_writer  cartographer_pbstream_map_publisher  cartographer_pbstream_to_ros_map  cartographer_rosbag_validate
fishbot_ws/install/cartographer_ros/share/cartographer_ros/: local_setup.dsv  local_setup.sh  package.bash  package.sh  package.zsh
fishbot_ws/install/cartographer_ros_msgs/share/cartographer_ros_msgs/: package.bash  package.sh
fishbot_ws/install/cartographer_rviz/share/cartographer_rviz/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
fishbot_ws/install/costmap_queue/share/costmap_queue/: package.sh
fishbot_ws/install/dwb_core/share/dwb_core/: local_setup.sh  package.sh
fishbot_ws/install/dwb_critics/share/dwb_critics/: package.sh
fishbot_ws/install/dwb_msgs/share/dwb_msgs/: package.sh
fishbot_ws/install/dwb_plugins/share/dwb_plugins/: package.sh
fishbot_ws/install/fishbot_cartographer/share/fishbot_cartographer/: local_setup.sh  package.sh  (+5 more)
fishbot_ws/log/: latest_build
fishbot_ws/src/fishbot_cartographer/: CMakeLists.txt
fishbot_ws/src/fishbot_cartographer/config/: fishbot_2d.lua
fishbot_ws/src/fishbot_cartographer/launch/: cartographer.launch.py
fishbot_ws/src/fishbot_cartographer/map/: fishbot_map.pgm
fishbot_ws/src/fishbot_description/: setup.py
fishbot_ws/src/fishbot_description/launch/: display_rviz2.launch.py
fishbot_ws/src/fishbot_description/world/: fishbot.world
fishbot_ws/src/fishbot_navigation2/: CMakeLists.txt
fishbot_ws/src/fishbot_navigation2/maps/: fishbot_map.pgm  fishbot_map.yaml
fishbot_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
fishbot_ws/src/log/: latest_build
(+333 files in other folders)
