<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2964793117@qq.com">nagisa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  #添加依赖包时手动添加(2:build_depend)(3:exec_depend)
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
#记得改完依赖包,空间名字之后删掉除src的文件夹重新colcon build	
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>

